@@ -150,6 +150,13 @@ class AMAROK_EXPORT MainWindow : public KMainWindow
         void slotFocusPlaylistSearch();
         void slotFocusCollectionSearch();
         void slotShufflePlaylist();
+        void slotSeekForwardShort();
+        void slotSeekForwardMedium();
+        void slotSeekForwardLong();
+        void slotSeekBackwardShort();
+        void slotSeekBackwardMedium();
+        void slotSeekBackwardLong();
+
 #ifdef DEBUG_BUILD_TYPE
         void showNetworkRequestViewer();
 #endif // DEBUG_BUILD_TYPE
